--- a/css/dat_ve.css
+++ b/css/dat_ve.css
@@ -53,93 +53,49 @@
     color: #fff !important;
 }
 
-/*Style carousel*/
-.carousel-control.right, .carousel-control.left {
-    background-image: none;
+
+/*=========Ticket==========*/
+.ticket{
+    margin: 0;
+    padding: 0;
+}
+
+.left-ticket{
+    border: solid 1px #ddd;
+    border-radius: 5px;
+}
+
+
+
+.form-control{
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: solid 1px red;
+    width: 80%;
+}
+
+/*============== giá tiền ========*/
+.loai-gia{
+    border-color: blue;
+}
+/*============Contact==========*/
+
+.item-block {
+
+}
+
+.item-block h5 {
     color: #f4511e;
 }
 
-.carousel-indicators li {
-    border-color: #f4511e;
-}
-
-.carousel-indicators li.active {
-    background-color: #f4511e;
-}
-
-.item span {
-    font-style: normal;
-}
-
-/*Customize navbar toggle button*/
-button.navbar-toggle{
-    background: none;
-    border: none;
-    color: #000;
-}
-
-button.navbar-toggle span{
-    background: #000;/*change accordingly*/
-}
-
-
-.carousel-inner .item img {
-    width: 650px;
-    height: 350px;
-}
-
-/*Style for booking*/
-.booking {
-    text-align: center;
-    padding: 20px;
-}
-
-.booking-title {
-    margin-bottom: 30px;
-}
-
-.booking-content {
-
-}
-
-.booking-content h4 {
-    text-transform: uppercase;
-}
-
-.booking form select {
-    border: none;
-    border-bottom: 2px solid #f5f5f5;
-    box-shadow: none;
-    display: inline-block;
-    color: #666;
-    text-indent: 10px;
-}
-
-.controls {
-    position: relative;
-}
-
-.controls .btn-group {
-
-}
-
-.controls i {
-    position: absolute;
-    top: 8px;
-    z-index: 100;
-}
-
-.datepicker {
-    z-index: 10000 !important;
-}
 
 
 /*=================Footer===========*/
-.footer {
+
+.footer{
     background-color: #ffc926;
 }
-
-
 .footer .copyright {
     height: 100px;
     background-color: #111;
@@ -148,8 +104,6 @@ button.navbar-toggle span{
     text-transform: uppercase;
     font-family: serif;
 }
-
-/*============Contact==========*/
 
 .item-block {
 
